--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,7 @@ ul { margin-left: 20px; }
 /* Botões comuns a todas as páginas */
 .cta-button, .product-button {
   display: inline-block;
-  background: var(--marrom);
+  background: var(--grafite);
   color: white;
   padding: 8px 15px;
   text-decoration: none;
@@ -37,8 +37,8 @@ ul { margin-left: 20px; }
 }
 .secondary-button {
   display: inline-block;
-  border: 1px solid var(--marrom);
-  color: var(--marrom);
+  border: 1px solid var(--grafite);
+  color: var(--grafite);
   padding: 8px 15px;
   text-decoration: none;
   border-radius: 30px;
@@ -172,7 +172,7 @@ main {
 /* Seção Hero */
 .hero { 
   display: flex; 
-  background: var(--bege); 
+  background: var(--marrom); 
   margin-bottom: 20px;
   border: 1px solid var(--cinza);
   width: 100%;
@@ -220,7 +220,7 @@ main {
   flex-grow: 1;
   max-width: 400px;
   border-radius: 20px;
-   background-color: var(--bege);
+   background-color: var(--marrom);
  
 }
 .product-card:hover {
@@ -246,14 +246,14 @@ main {
     top: 10px;
     right: 10px;
 }
-.price { color: var(--marrom); }
+.price { color: var(--grafite); }
 
 /* Seção de destaque da coleção */
 .collection-highlight { 
     display: flex; 
-    background: var(--bege); 
+    background: var(--marrom); 
   margin-bottom: 20px; 
-  border: 1px solid var(--cinza);
+  border: 1px solid var(--grafite);
   width: 100%;
   border-radius: 20px;
 }
