--- a/assets/style.css
+++ b/assets/style.css
@@ -82,7 +82,7 @@ header {
   gap: 20px;
 }
 .main-nav { 
-  background: var(--bege); 
+  background: var(--marrom); 
   padding: 10px; 
   width: 100%;
 }
